@@ -34,6 +34,34 @@ executable.
 </div>
 
 <DL>
+<DT><STRONG>2 May 2007</STRONG> 
+<DD>
+<UL>
+<LI>updated to the elsa stack svn repository, version May 2 2006
+(svn versions: elsa-stack: 9 smbase: 491 ast: 282 elkhound: 1045
+elsa: 2476) 
+</LI>
+<LI>added node types Scope, TemplateInfo, InheritedTemplateParams
+and a few additional fields in other nodes
+</LI>
+<LI>some fields changed their type (for instance case labels changed
+from int to int32)
+</LI>
+<LI>check_oast: new consistency checks of generated oast files:
+relying on the <A HREF="~/memcheck" >Memcheck Ocaml library</A>.
+</LI>
+<LI>new library function for reading oast files:
+Oast_header.unmarshal_oast
+</LI>
+<LI>oast files contain now a version number
+</LI>
+<LI>The Ocaml Ast can now be read into an array, see module Superast
+</LI>
+<LI>ast_graph supports several options for node selection: for
+instance -node, -all, -dia, -loc
+</LI>
+</UL>
+<P>
 <DT><STRONG>30 Oct 2006:</STRONG> Version 0.2 released, changes:
 <DD> 
 <UL>
@@ -55,22 +83,16 @@ for the <A
 HREF="http://www.cs.berkeley.edu/~smcpeak/elkhound/sources/ast/"
 >astgen tool</A> and for Elsa. In the future <span
 style="color:#0048ff;"><STRONG>Olmar</STRONG></span> will
-hopefully get integrated into the Elsa/Elkhound distribution. At
-the moment <span
-style="color:#0048ff;"><STRONG>Olmar</STRONG></span> is based on
-the latest Elsa distribution 2005.08.22b. After this release work
-will start to adopt olmar to the latest Elsa versions available
-from <A HREF="http://www.cubewano.org/oink/" >Oink.</A>
+hopefully get integrated into the Elsa/Elkhound distribution.
+At the moment I track the elsa-stack svn repository.
 <P>
 
 For
 simplicity I only distribute a complete
 smbase/Ast/Elkhound/Elsa/<span
 style="color:#0048ff;"><STRONG>Olmar</STRONG></span> system now. If
-you want to have pure Elsa, please download it from <A
-HREF="http://www.cs.berkeley.edu/~smcpeak/elkhound/" >the Elsa
-website</A> or (for something newer) from the <A
-HREF="http://www.cubewano.org/oink/#oink-stack" >Oink-Stack
+you want to have pure Elsa, please download it from the <A
+HREF="http://www.cubewano.org/oink/#Gettingthecode" >Oink
 repository.</A> 
 
 
@@ -86,7 +108,8 @@ repository.</A>
 <LI>Flex</LI>
 <LI>perl5</LI>
 <LI>(I believe some Yacc variant, like bison)</LI>
-<LI>and of course Ocaml</LI>
+<LI>of course Ocaml</LI>
+<LI><A HREF="~/memcheck" >the Memcheck library for Ocaml</A></LI>
 </UL>
 
 
@@ -96,7 +119,7 @@ success/failure matrix</A>
 <P>
 
 (It appears to run on a 64bit system. However, there are quite a
-few warning about casts between pointer and integer. I guess it
+few warnings about casts between pointer and integer. I guess it
 is pure luck that it passes the regression tests.)
 
 
@@ -105,8 +128,8 @@ is pure luck that it passes the regression tests.)
 choose from the following alternative:
 <UL>
 <LI>current release: <A
-HREF="http://www.cs.ru.nl/~tews/olmar/releases/elsa-2005.08.22b-olmar-@RELEASEDATE@.tar.gz"
->elsa-2005.08.22b-olmar-@RELEASEDATE@.tar.gz</A>
+HREF="http://www.cs.ru.nl/~tews/olmar/releases/elsa-olmar-@RELEASEDATE@.tar.gz"
+>elsa-olmar-@RELEASEDATE@.tar.gz</A>
 </LI>
 <LI><A HREF="http://www.sos.cs.ru.nl/cgi-bin/~tews/olmar/viewvc-patch.cgi/elsa/" >Browse the cvs
 repository</A>
@@ -171,6 +194,9 @@ elsa/ccparse -oc <A HREF="crc.oast" >crc.oast</A> <A HREF="crc.ii" >crc.ii</A>
 asttools/ast_graph -o <A HREF="crc.dot" >crc.dot</A> <A HREF="crc.oast" >crc.oast</A> 
 </PRE>
 </BLOCKQUOTE>
+(This will silently omit all nodes for unused builtin functions,
+such as <KBD>__builtin_memcpy</KBD>. Use option -all to get all nodes.)
+<P>
 </LI>
 <LI>View the graph, using one of the following lines
 <BLOCKQUOTE><PRE>
@@ -179,6 +205,8 @@ dotty crc.dot
 dot -Tps crc.dot -o crc.ps; gv <A HREF="crc.ps.gz" >crc.ps</A>
 </PRE>
 </BLOCKQUOTE>
+(If gv fail with an error, try a smaller magnification.)
+<P>
 </LI>
 <LI>or generate a png from it (<KBD>dot -Tpng</KBD>):
 <A HREF="crc.png" ><IMG SRC="crc-small.png"  alt="syntax tree example" align="center"></A>
@@ -528,7 +556,7 @@ that triggers these assertions.
 
 <HR><FONT SIZE="-2">
 last changed on
-<!-- hhmts start -->19 Apr 2007
+<!-- hhmts start --> 4 May 2007
 <!-- hhmts end -->
 by <A HREF="http://www.cs.ru.nl/~tews">Hendrik</A>
 </FONT></BODY> </HTML>
