@@ -13,11 +13,12 @@
 <TR valign="top"><TD>
 I applied the ast_graph tool to the file
 <KBD>byterun/minor_gc.c</KBD> in the Ocaml 3.09.3 distribution.
-With about 15.000 nodes and 20.000 edges its syntax tree is
+With about 15.000 nodes and 21.000 edges its syntax tree is
 not really bit. However, it still big enough to get most viewer
 software into trouble. On the right hand side you see a small
-part of it (about 5%) reduced to a 2000x1300 pixels. The line
-at the bottom of the page is the full tree, reduced to 8000x280.
+part of it (about 0.8%) reduced to a 2000x1580 pixels. The
+greyish something
+at the bottom of the page is the full tree, reduced to 8000x599.
 <P>
 
 You can download the following versions:
@@ -25,7 +26,7 @@ You can download the following versions:
 <TR><TD>
 <A HREF="minor_gc-detail.png.gz" >[minor_gc-detail.png.gz]</A>
 </TD><TD>
-detail (as on the right hand side) as 30150 x 19538 png
+detail (as on the right hand side) as png 8576 x 6777
 </TD><TR><TD>
 <A HREF="minor_gc.ps.gz" >[minor_gc.ps.gz]</A>
 </TD><TD>
@@ -34,6 +35,7 @@ complete tree, postscript
 <A HREF="minor_gc-pages.ps.gz" >[minor_gc-pages.ps.gz]</A>
 </TD><TD>
 complete tree, postscript, paginated
+(use small magnification in case gv complains)
 </TD><TR><TD>
 <A HREF="minor_gc.fig.gz" >[minor_gc.fig.gz]</A>
 </TD><TD>
@@ -63,7 +65,7 @@ scrolling and sooming).
 <P>
 <FONT SIZE="-2">
 last changed on
-<!-- hhmts start -->30 Oct 2006
+<!-- hhmts start --> 3 May 2007
 <!-- hhmts end -->
 by <A HREF="/~tews">Hendrik</A>
 </FONT></BODY> </HTML>
